RESOLVED FIXED155086
RenderTextControlSingleLine shouldn't mutate placeholder element inline style
https://bugs.webkit.org/show_bug.cgi?id=155086
Summary RenderTextControlSingleLine shouldn't mutate placeholder element inline style
Antti Koivisto
Reported 2016-03-06 01:03:31 PST
Mutating DOM from a renderer is bad.
Attachments
patch (13.13 KB, patch)
2016-03-06 01:18 PST, Antti Koivisto
no flags
patch (13.14 KB, patch)
2016-03-06 01:29 PST, Antti Koivisto
no flags
patch (13.17 KB, patch)
2016-03-06 01:35 PST, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2016-03-06 01:18:45 PST
Antti Koivisto
Comment 2 2016-03-06 01:29:45 PST
WebKit Commit Bot
Comment 3 2016-03-06 01:32:15 PST
Attachment 273132 [details] did not pass style-queue: ERROR: Source/WebCore/html/shadow/TextControlInnerElements.cpp:44: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/WebCore/html/shadow/TextControlInnerElements.h:80: "virtual" is redundant since function is already declared as "override" [readability/inheritance] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Antti Koivisto
Comment 4 2016-03-06 01:35:09 PST
Andreas Kling
Comment 5 2016-03-06 02:02:41 PST
Comment on attachment 273133 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=273133&action=review r=me > Source/WebCore/ChangeLog:10 > + Text field placeholder element is currently managed by changing its inline style > + from the host renderer based on the host style and state. Rendering poking > + into DOM is wrong. This is so weird. > Source/WebCore/html/shadow/TextControlInnerElements.cpp:165 > +// ---------------------------- ---------------------------- > Source/WebCore/html/shadow/TextControlInnerElements.h:78 > + TextControlPlaceholderElement(Document&); explicit
Antti Koivisto
Comment 6 2016-03-06 02:20:55 PST
Note You need to log in before you can comment on or make changes to this bug.